--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongodb": "^4.12.0"
+    "mongodb": "^4.12.0",
+    "yup": "^0.32.11"
   }
 }
